# testwork

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: orders.py  payments.py
backend/app/clients/: bank.py
backend/app/core/: config.py  database.py  enums.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 225d7f1a8d57_initial.py  2ef3d7f3388c_seed_orders.py
backend/app/models/: order.py  payment.py
backend/app/repositories/: order.py  payment.py
backend/app/schemas/: bank.py  order.py  payment.py
backend/app/services/: order.py  payment.py
backend/app/utils/: dependencies.py  repository.py  unitofwork.py
backend/tests/: conftest.py  test_payment_service.py  test_schemas.py
documents/: architecture.md  database.md  payment-service.md  testing.md
